se agregan estilos css hasta mein- center right

--- a/Examen Practico Final - FE1/index.html
+++ b/Examen Practico Final - FE1/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!--En la seccion siguiente del header, se contiene el logo del producto, una barra de navegacion con 5 elementos y un button "Get started"-->
-    <header>
+    <header id="header">
 
         <!--logo-->
 
@@ -43,7 +43,7 @@
 
     <!--section Main que contiene 3 contenedores (contein-top  contein-center  contein bottom) con dos elementos c/u- -->
 
-    <main class="principal">
+    <main id="main">
 
 
         <!--contein-top con 2 section-->
