se agrega css, responsive para 600px y pseudo clases hover

--- a/Examen Practico Final - FE1/index.html
+++ b/Examen Practico Final - FE1/index.html
@@ -20,6 +20,7 @@
 
         <!---nav-top-->
 
+    
         <nav class="navheader">
             <ul class="ul-nav">
                 <li class="li-nav"><a href="####" class="atop">Pricing</a>
@@ -35,8 +36,9 @@
             </ul>
         </nav>
 
+        <!-- icon hambur -->
+        <div class="contein-hamburger"><img src="./Examen Practico Final - FE1/imagenes/icon-hamburger.svg" alt="menuambur"></div>
         <!--button-->
-
         <button class="bp">Get Started</button>
 
     </header>
@@ -147,7 +149,7 @@
 
                           <!-- Cards -->
 
-                        <div class="cards">
+                        <div class="cards" id="unocards">
 
                             <img src="./Examen Practico Final - FE1/imagenes/avatar-anisha.png" alt="Anisha Li" class="imgcards">
 
@@ -160,7 +162,7 @@
                         </div>
    
                         <!-- cards -->
-                        <div class="cards">
+                        <div class="cards" id="doscards">
    
                            <img src="./Examen Practico Final - FE1/imagenes/avatar-ali.png" alt="Ali Bravo" class="imgcards">
                             
@@ -175,7 +177,7 @@
    
                        <!-- cards -->
    
-                       <div class="cards">
+                       <div class="cards" id="trescards">
    
                            <img src="./Examen Practico Final - FE1/imagenes/avatar-richard.png" alt="Richard Watts" class="imgcards">
    
